27 June 2007
+ Basic functionality in place. Can create, edit, and view.
+ Little else working.

13 June 2007
+ Commited foundation