@@ -1,0 +1,8 @@
+<script type="text/javascript">
+     text = opener.document.getElementById('{cnt_section_name}');
+     hidden = opener.document.getElementById('{hdn_section_name}');
+     content = '{content}';
+     text.innerHTML = content;
+     hidden.value = '{hidden_value}';
+     window.close();
+</script>
